# FiiO-Shuffle

./: LICENSE  README.md  pyproject.toml  requirements.txt
config/uwsgi/: fiio-shuffle.ini
fiio_shuffle/: client.py  config.json  controllers.py  models.py  server.py  utils.py
fiio_shuffle/static/: style.sass
src/FiiO_shuffle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fiio_shuffle/: __init__.py  args.py  client.py  config.py  controllers.py  db.py  models.py  server.py  utils.py
src/fiio_shuffle/static/: style.sass
src/fiio_shuffle/templates/: index.html  index.html.jinja
systemd/user/: fiio-shuffle.service
